welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:29: error: ')' expected but '}' found.
    else{for (l <- 1 to (-y){recule();}}
                                       ^FlowerCase:32: error: ')' expected but '}' found.
    else{for(l <- 1 to (-x){recule();}}
                                      ^